Next release:

0005040: Fix production of duplicate crontab entries by fabfile
0005033: Clean up cron job functionality
0004562: Use supplied tarball name for wget filename for local disk -- required to handle Google Code tarballs
0004443: Handle addition of lines to crontab not matching e.g. * * * * * blah..., and handle single quotes correctly
0004421: Allow for local tarball unpacking
0004399: Accept arbitrary (non-int) arguments for crontab creation
0004307: Add _add_cron_job() method
0004306: Some methods operate on the local machine if 'do_local' param is True
0004299: Add 'hidden' (_) versions of some functions in common file
0004280: Fix broken confirm_with_details decorator
0004260: Factor tarball operations and possibly others to fabric-common so others can use them.
0004258: Create Fabric project in Subversion